--- a/src/main/resources/templates/tagForm.html
+++ b/src/main/resources/templates/tagForm.html
@@ -8,7 +8,7 @@
 <h1>강의실 생성 폼</h1>
 <form action="#" th:action="@{/tag/saveTag}" th:object="${tag}" method="post">
     <label for="name">태그 이름:</label>
-    <input type="text" id="name" th:field="*{name}">
+    <input type="text" id="name" th:field="*{tagName}">
     <br>
     <button type="submit">저장</button>
 </form>
