--- a/src/main/resources/templates/statistical/statisticalData.html
+++ b/src/main/resources/templates/statistical/statisticalData.html
@@ -539,7 +539,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">태그 삭제</h5>
+                <h5 class="modal-title" id="exampleModalLabel">제</h5>
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
@@ -549,43 +549,22 @@
                 <p>삭제하시면 더 이상 태그의 정보를 확인하실 수 없습니다.</p>
                 <span>삭제 후 해당 강의실의 메인페이지로 이동됩니다.</span>
             </div>
-            <div class="modal-footer">
-                <button id="confirmDelete" class="btn btn-primary" style="background: #2e59d9; border-color: #2e59d9;" onclick="deleteSelectedTag()">삭제</button>
-                <button class="btn btn-primary" data-dismiss="modal" style="background: #adb5bd; border-color: #adb5bd;">취소</button>
-            </div>
+            <form id="deleteTagForm" th:action="@{/tag/delete/}" method="post" enctype="multipart/form-data">
+                <div class="modal-footer">
+                    <button type="submit" id="confirmDelete" class="btn btn-primary" style="background: #2e59d9; border-color: #2e59d9;">삭제</button>
+                    <button class="btn btn-primary" data-dismiss="modal" style="background: #adb5bd; border-color: #adb5bd;">취소</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
 <script th:inline="javascript">
-    var deleteTagId; // 전역 변수로 삭제할 태그의 ID를 저장할 변수
-    var lectureRoomId = /*[[${lectureRoom.lectureRoomId}]]*/ '';
-
-    // 삭제할 태그의 ID를 저장하는 함수
     function setDeleteTagId(tagId) {
-        deleteTagId = tagId;
-    }
-    // 태그 삭제 함수
-    function deleteTag(tagId) {
-        $.ajax({
-            type: "POST",
-            url: "/tag/delete/" + tagId,
-            success: function(response) {
-                console.log("태그가 성공적으로 삭제되었습니다.");
-                location.href = '/lecture-room/detail/' + lectureRoomId;
-            },
-            error: function(xhr, status, error) {
-                // 삭제 중 에러가 발생했을 때 실행할 작업
-                console.error("태그 삭제 중 에러가 발생했습니다:", error);
-                // 여기에 에러 처리를 위한 작업을 수행할 수 있습니다.
-            }
-        });
+        var form = document.getElementById('deleteTagForm');
+        form.action = '/tag/delete/' + tagId;
     }
 
-    function deleteSelectedTag() {
-        // var tagId = $('#confirmDelete').data("data-tagid"); // 선택한 태그의 tagId 가져오기
-        console.log("태그 아이디: ", deleteTagId);
-        deleteTag(deleteTagId); // deleteTag 함수 호출
-    }
+
     document.addEventListener('DOMContentLoaded', (event) => {
       // 이름 데이터 배열
       var names = ["강준혁", "이한나", "장유진","김용현","김광일","최혜림","김신후","최지호","한시온"]; // 실제 이름 데이터로 대체하세요.
