--- a/src/main/resources/templates/statistical/statisticalData.html
+++ b/src/main/resources/templates/statistical/statisticalData.html
@@ -96,7 +96,7 @@
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                         <!-- 수정 옵션 -->
-                                        <button class="dropdown-item edit-tag" data-tagid="${tag.tagId}" data-tagname="${tag.name}" th:onclick="'clickTagUpdate(\'' + ${tag.tagId} + '\')'">수정</button>
+                                        <button class="dropdown-item edit-tag" data-tagid="${tag.tagId}" data-tagname="${tag.name}" data-toggle="modal" data-target="#TagUpdateModal" th:onclick="'setUpdateTagId(\'' + ${tag.tagId} + '\')'">수정</button>
                                         <!-- 삭제 옵션 -->
                                         <button class="dropdown-item delete-tag" data-tagid="${tag.tagId}" data-toggle="modal" data-target="#TagDeleteModal" th:onclick="'setDeleteTagId(\'' + ${tag.tagId} + '\')'">삭제</button>
                                     </div>
@@ -175,66 +175,66 @@
             }
 
             // 태그 이름 수정하기
-            function clickTagUpdate(tagId) {
-                // 해당 태그 아이디의 <a> 태그를 찾습니다.
-                var tagItem = document.getElementById('tagItem_' + tagId);
-                var duplicationTag = document.getElementById('duplicationTag_' + tagId);
-                // 해당 태그 아이디의 <div> 태그를 찾습니다.
-                var dropdownItem = document.getElementById('dropdownItem_' + tagId);
-
-                // 태그 이름을 가져옵니다.
-                var tagName = tagItem.textContent.trim();
-
-                // <input> 태그로 교체합니다.
-                var inputElement = document.createElement('input');
-                inputElement.setAttribute('type', 'text');
-                inputElement.setAttribute('value', tagName);
-                inputElement.setAttribute('id', 'tagInput_' + tagId);
-                // 이전 태그를 숨깁니다.
-                tagItem.style.display = 'none';
-                // 해당 dropdownItem을 숨깁니다.
-                dropdownItem.style.display = 'none';
-
-                // 입력 필드를 삽입합니다.
-                tagItem.parentNode.insertBefore(inputElement, tagItem.nextSibling);
-
-                // 수정한 값을 저장하고 업데이트합니다.
-                inputElement.addEventListener('keydown', function(event) {
-                    if (event.key === 'Enter') {
-                        var newTagName = inputElement.value.trim();
-                        // AJAX 요청
-                        var xhr = new XMLHttpRequest();
-                        xhr.open('POST', '/tag/update/' + tagId); // tagId를 URL에 포함하여 전송
-                        xhr.setRequestHeader('Content-Type', 'application/json');
-                        xhr.onload = function () {
-                            if (xhr.status === 200) {
-                                // 태그가 성공적으로 업데이트되었을 때 리로드
-                                location.reload();
-
-                            } else if (xhr.status === 400) {
-                                // 동일한 이름의 태그가 이미 존재할 때
-                                tagItem.textContent = xhr.responseText;
-                                tagItem.style.display = 'inline';
-                                dropdownItem.style.display = '';
-                                //중복 태그 경고
-                                duplicationTag.style.display = 'inline';
-                                setTimeout(function() {
-                                    duplicationTag.style.display = 'none';
-                                }, 2000);
-                                // alert("동일한 이름의 태그가 이미 존재합니다. 다른 이름으로 태그를 변경해주세요.");
-                            } else {
-                                // 다른 에러가 발생했을 때
-                                console.error('Failed to update tag. Status:', xhr.status);
-                            }
-                        };
-                        xhr.send(JSON.stringify({ tagName: newTagName }));
-                        console.log('New Tag Name:', newTagName);
-
-                        // 입력 필드 제거
-                        inputElement.parentNode.removeChild(inputElement);
-                    }
-                });
-            }
+            // function clickTagUpdate(tagId) {
+            //     // 해당 태그 아이디의 <a> 태그를 찾습니다.
+            //     var tagItem = document.getElementById('tagItem_' + tagId);
+            //     var duplicationTag = document.getElementById('duplicationTag_' + tagId);
+            //     // 해당 태그 아이디의 <div> 태그를 찾습니다.
+            //     var dropdownItem = document.getElementById('dropdownItem_' + tagId);
+            //
+            //     // 태그 이름을 가져옵니다.
+            //     var tagName = tagItem.textContent.trim();
+            //
+            //     // <input> 태그로 교체합니다.
+            //     var inputElement = document.createElement('input');
+            //     inputElement.setAttribute('type', 'text');
+            //     inputElement.setAttribute('value', tagName);
+            //     inputElement.setAttribute('id', 'tagInput_' + tagId);
+            //     // 이전 태그를 숨깁니다.
+            //     tagItem.style.display = 'none';
+            //     // 해당 dropdownItem을 숨깁니다.
+            //     dropdownItem.style.display = 'none';
+            //
+            //     // 입력 필드를 삽입합니다.
+            //     tagItem.parentNode.insertBefore(inputElement, tagItem.nextSibling);
+            //
+            //     // 수정한 값을 저장하고 업데이트합니다.
+            //     inputElement.addEventListener('keydown', function(event) {
+            //         if (event.key === 'Enter') {
+            //             var newTagName = inputElement.value.trim();
+            //             // AJAX 요청
+            //             var xhr = new XMLHttpRequest();
+            //             xhr.open('POST', '/tag/update/' + tagId); // tagId를 URL에 포함하여 전송
+            //             xhr.setRequestHeader('Content-Type', 'application/json');
+            //             xhr.onload = function () {
+            //                 if (xhr.status === 200) {
+            //                     // 태그가 성공적으로 업데이트되었을 때 리로드
+            //                     location.reload();
+            //
+            //                 } else if (xhr.status === 400) {
+            //                     // 동일한 이름의 태그가 이미 존재할 때
+            //                     tagItem.textContent = xhr.responseText;
+            //                     tagItem.style.display = 'inline';
+            //                     dropdownItem.style.display = '';
+            //                     //중복 태그 경고
+            //                     duplicationTag.style.display = 'inline';
+            //                     setTimeout(function() {
+            //                         duplicationTag.style.display = 'none';
+            //                     }, 2000);
+            //                     // alert("동일한 이름의 태그가 이미 존재합니다. 다른 이름으로 태그를 변경해주세요.");
+            //                 } else {
+            //                     // 다른 에러가 발생했을 때
+            //                     console.error('Failed to update tag. Status:', xhr.status);
+            //                 }
+            //             };
+            //             xhr.send(JSON.stringify({ tagName: newTagName }));
+            //             console.log('New Tag Name:', newTagName);
+            //
+            //             // 입력 필드 제거
+            //             inputElement.parentNode.removeChild(inputElement);
+            //         }
+            //     });
+            // }
         </script>
 
 
@@ -534,12 +534,37 @@
     </div>
 </div>
 
+<!-- Tag Update Modal-->
+<div class="modal fade" id="TagUpdateModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">태그 수정</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <form id="updateTagForm" th:action="@{/tag/update/}" method="post" enctype="multipart/form-data">
+            <div class="modal-body">
+                <h4>변경할 태그 이름을 입력해주세요</h4>
+                <input type="text" id="newTagName" name="tagName" class="form-control" placeholder="새로운 태그 이름 입력">
+            </div>
+
+                <div class="modal-footer">
+                    <button type="submit" id="confirmUpdate" class="btn btn-primary" style="background: #2e59d9; border-color: #2e59d9;">수정</button>
+                    <button class="btn btn-primary" data-dismiss="modal" style="background: #adb5bd; border-color: #adb5bd;">취소</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <!-- Tag Delete Modal-->
 <div class="modal fade" id="TagDeleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">제</h5>
+                <h5 class="modal-title" id="exampleModalLabel">태그 삭제</h5>
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
@@ -559,6 +584,26 @@
     </div>
 </div>
 <script th:inline="javascript">
+    function setUpdateTagId(tagId) {
+        var form = document.getElementById('updateTagForm');
+        form.action = '/tag/update/' + tagId;
+    }
+
+    document.getElementById('updateTagForm').addEventListener('submit', function (event) {
+        var newTagName = document.getElementById('newTagName').value.trim();
+        if (!newTagName) {
+            alert('태그 이름을 입력해주세요.');
+            event.preventDefault();
+        }
+    });
+    // 태그 수정 모달이 열릴 때 실행될 함수
+    $('#TagUpdateModal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget); // 클릭된 버튼
+        var tagName = button.data('tagname'); // data-tagname 속성에서 태그 이름 가져오기
+        var modal = $(this);
+        modal.find('.modal-body #newTagName').attr('placeholder', tagName); // 입력 필드의 placeholder에 태그 이름 설정
+    });
+
     function setDeleteTagId(tagId) {
         var form = document.getElementById('deleteTagForm');
         form.action = '/tag/delete/' + tagId;
