--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -199,14 +199,15 @@
                                 <p class="card-text text-muted mt-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
                                     현재 강의실 인원: <span th:text="${lectureRoom.memberCount}">0</span> 명
                                 </p>
-                                <a th:if="${param.searchKeyword}"
-                                th:onclick="'openInviteCodeModal(' + ${lectureRoom.lectureRoomId} + ');'"
+                                <a th:if="${lectureRoom.role == null}"
+                                   th:onclick="'openInviteCodeModal(' + ${lectureRoom.lectureRoomId} + ');'"
                                    class="btn btn-primary btn-sm align-self-end"
                                    style="background: #425de3; border-color: #425de3;">강의실 입장</a>
-                                <a th:unless="${param.searchKeyword}"
-                                th:onclick="'openInviteCodeModal(' + ${lectureRoom.lectureRoomId} + ');'"
+                                <a th:if="${lectureRoom.role != null}"
+                                   th:href="@{/lecture-room/detail/{id}(id=${lectureRoom.lectureRoomId})}"
                                    class="btn btn-primary btn-sm align-self-end"
                                    style="background: #425de3; border-color: #425de3;">강의실 입장</a>
+                            </div>
                             </div>
                         </div>
                     </div>
