feat: 데이터 없을 때, 학생 뷰에서 그래프 해당 그래프 안보이고 코멘트만 보일 수 있는 기능 생성 및 에러 발생시 로그인 화면으로 돌아가는 기능

--- a/src/main/resources/templates/errorpage.html
+++ b/src/main/resources/templates/errorpage.html
@@ -47,9 +47,9 @@
 </head>
 <body>
 <div class="error-container">
-  <h1>오류 발생!</h1>
-  <p>요청하신 페이지를 처리하는 중에 오류가 발생했습니다.</p>
-  <a th:href="@{/lecture-room}">홈으로 돌아가기</a>
+  <h1>Error 발생!</h1>
+  <p>요청하신 페이지를 처리하는 중에 에러가 발생했습니다.</p>
+  <a th:href="@{/auth/login}">로그인 화면으로 돌아가기</a>
 </div>
 </body>
 </html>
