--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,13 +72,6 @@
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
 
-        <!-- Nav Item - Dashboard -->
-<!--        <li class="nav-item active">-->
-<!--            <a class="nav-link" href="/ClassHub/lecture-room">-->
-<!--                <i class="fas fa-fw fa-tachometer-alt"></i>-->
-<!--                <span>대시보드</span></a>-->
-<!--        </li>-->
-
         <!-- Divider -->
         <hr class="sidebar-divider">
 
@@ -320,7 +313,7 @@
 
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title">이메일 수정</h4>
+        <h4 class="modal-title">개인정보 수정</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
@@ -329,15 +322,15 @@
         <form id="emailUpdateForm" th:action="@{/updateEmail/{memberId}(memberId=${session.member.memberId})}" method="post">
           <div class="form-group">
             <label>이름: </label>
-            <span th:text="${session.member.member_name}"></span>
+            <span th:text="${member.member_name}"></span>
           </div>
           <div class="form-group">
             <label>학번: </label>
-            <span th:text="${session.member.uniqueId}"></span>
+            <span th:text="${member.uniqueId}"></span>
           </div>
           <div class="form-group">
             <label for="email">이메일: </label>
-            <input type="email" class="form-control" id="email" name="email" th:value="${session.member.email}" required>
+            <input type="email" class="form-control" id="email" name="email" th:value="${member.email}" required>
           </div>
         </form>
       </div>
@@ -375,6 +368,26 @@
                 event.preventDefault(); // 폼 제출을 막습니다.
                 alert('학생 정보 키를 입력해야 합니다.'); // 사용자에게 경고합니다.
             }
+        });
+
+        $('#emailUpdateForm').on('submit', function(event) {
+            event.preventDefault(); // 폼의 기본 제출 동작을 막음
+
+            $.ajax({
+                url: $(this).attr('action'),
+                type: $(this).attr('method'),
+                data: $(this).serialize(),
+                success: function(response) {
+                    // 성공 시 메시지 표시
+                    alert("이메일 수정에 성공하였습니다.");
+                    // 모달을 닫고 싶다면 아래 라인을 추가하세요
+                    $('#updateEmailModal').modal('hide');
+                },
+                error: function(xhr, status, error) {
+                    // 에러 처리 (필요 시)
+                    alert("이메일 수정에 실패했습니다. 다시 시도해주세요.");
+                }
+            });
         });
     });
 
