--- a/src/main/resources/templates/student/studentPost.html
+++ b/src/main/resources/templates/student/studentPost.html
@@ -188,7 +188,7 @@
         <div class="container" style="width: 70%; min-width:300px; max-width: 800px;">
           <!-- Page Heading -->
           <div th:object="${lectureRoom}">
-            <h1 class="h3 mb-4 text-gray-800" th:text="${lectureRoom.roomName}"></h1>
+            <h1 class="mb-4 text-gray-800" th:text="${lectureRoom.roomName}"></h1>
           </div>
           <div class="row justify-content-center">
             <div th:each="post : ${posts}" class="col-12 mb-4">
@@ -208,7 +208,7 @@
                 </div>
               </div>
             </div>
-            <div class="row">
+            <div class="row" th:if="${posts != null}">
               <div class="col" style="display: flex; justify-content: center;">
                 <nav aria-label="Page navigation example">
                   <ul class="pagination" style="margin: 0 auto;">
@@ -232,6 +232,7 @@
                 </nav>
               </div>
             </div>
+
           </div>
         </div>
       </div>
