--- a/src/main/resources/templates/student/studentPost.html
+++ b/src/main/resources/templates/student/studentPost.html
@@ -232,7 +232,6 @@
                 </nav>
               </div>
             </div>
-
           </div>
         </div>
       </div>
@@ -247,6 +246,7 @@
     </footer>
     <!-- End of Footer -->
   </div>
+</div>
   <!-- End of Page Wrapper -->
 
   <!-- Scroll to Top Button-->
